--- a/firmware/nodes/stair_step/platformio.ini
+++ b/firmware/nodes/stair_step/platformio.ini
@@ -26,3 +26,22 @@ lib_deps =
     Step_mngr
 lib_extra_dirs = packages
 debug_tool = stlink
+
+[env:l0_bootloader]
+board_build.ldscript = linker/custom_app_script.ld
+platform = ststm32
+board = l0
+framework = stm32cube
+build_flags =
+    -I inc
+    -include node_config.h
+    -D BOOTLOADER_MODE
+    -I ../../
+lib_deps =
+    Luos@^2.0.0
+    LuosHAL
+    Led_strip
+    Load
+    Step_mngr
+lib_extra_dirs = packages
+debug_tool = stlink
