--- a/firmware/nodes/stair_step/platformio.ini
+++ b/firmware/nodes/stair_step/platformio.ini
@@ -27,12 +27,50 @@ lib_deps =
 lib_extra_dirs = packages
 debug_tool = stlink
 
+[env:l0_master]
+platform = ststm32
+board = l0
+framework = stm32cube
+build_flags =
+    -D DETECTOR
+    -I inc
+    -include node_config.h
+    -I ../../
+lib_deps =
+    Luos@^2.0.0
+    LuosHAL
+    Led_strip
+    Load
+    Step_mngr
+lib_extra_dirs = packages
+debug_tool = stlink
+
 [env:l0_bootloader]
 board_build.ldscript = linker/custom_app_script.ld
 platform = ststm32
 board = l0
 framework = stm32cube
 build_flags =
+    -I inc
+    -include node_config.h
+    -D BOOTLOADER_MODE
+    -I ../../
+lib_deps =
+    Luos@^2.0.0
+    LuosHAL
+    Led_strip
+    Load
+    Step_mngr
+lib_extra_dirs = packages
+debug_tool = stlink
+
+[env:l0_master_bootloader]
+board_build.ldscript = linker/custom_app_script.ld
+platform = ststm32
+board = l0
+framework = stm32cube
+build_flags =
+    -D DETECTOR
     -I inc
     -include node_config.h
     -D BOOTLOADER_MODE
