Switch to Luos engine 2.4.0

--- a/firmware/nodes/stair_step/platformio.ini
+++ b/firmware/nodes/stair_step/platformio.ini
@@ -7,79 +7,46 @@
 ;
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
-[common]
-default_envs = l0
-
-[env:l0]
+[env]
 platform = ststm32
 board = l0
 framework = stm32cube
+lib_deps =
+    Luos_engine@^2.4.0
+    Led_strip
+    Load
+    Step_manager
+lib_extra_dirs =
+    packages
+    /Users/nicolasrabault/Projects/luos
+debug_tool = stlink
+
+[env:l0]
 build_flags =
     -I inc
     -include node_config.h
     -I ../../
-lib_deps =
-    Luos@^2.0.0
-    LuosHAL
-    Led_strip
-    Load
-    Step_mngr
-lib_extra_dirs = packages
-debug_tool = stlink
 
 [env:l0_master]
-platform = ststm32
-board = l0
-framework = stm32cube
 build_flags =
     -D DETECTOR
     -I inc
     -include node_config.h
     -I ../../
-lib_deps =
-    Luos@^2.0.0
-    LuosHAL
-    Led_strip
-    Load
-    Step_mngr
-lib_extra_dirs = packages
-debug_tool = stlink
 
 [env:l0_bootloader]
 board_build.ldscript = linker/custom_app_script.ld
-platform = ststm32
-board = l0
-framework = stm32cube
 build_flags =
+    -D BOOTLOADER_MODE
     -I inc
     -include node_config.h
-    -D BOOTLOADER_MODE
     -I ../../
-lib_deps =
-    Luos@^2.0.0
-    LuosHAL
-    Led_strip
-    Load
-    Step_mngr
-lib_extra_dirs = packages
-debug_tool = stlink
 
 [env:l0_master_bootloader]
 board_build.ldscript = linker/custom_app_script.ld
-platform = ststm32
-board = l0
-framework = stm32cube
 build_flags =
     -D DETECTOR
+    -D BOOTLOADER_MODE
     -I inc
     -include node_config.h
-    -D BOOTLOADER_MODE
     -I ../../
-lib_deps =
-    Luos@^2.0.0
-    LuosHAL
-    Led_strip
-    Load
-    Step_mngr
-lib_extra_dirs = packages
-debug_tool = stlink
