--- a/firmware/nodes/stair_step/platformio.ini
+++ b/firmware/nodes/stair_step/platformio.ini
@@ -22,27 +22,34 @@ lib_extra_dirs =
 debug_tool = stlink
 
 [env:l0]
+build_unflags = -Os
 build_flags =
     -I inc
     -include node_config.h
     -I ../../
+    -O1
 
 [env:l0_master]
+build_unflags = -Os
 build_flags =
     -D DETECTOR
     -I inc
     -include node_config.h
     -I ../../
+    -O1
 
 [env:l0_bootloader]
+build_unflags = -Os
 board_build.ldscript = linker/custom_app_script.ld
 build_flags =
     -D BOOTLOADER_MODE
     -I inc
     -include node_config.h
     -I ../../
+    -O1
 
 [env:l0_master_bootloader]
+build_unflags = -Os
 board_build.ldscript = linker/custom_app_script.ld
 build_flags =
     -D DETECTOR
@@ -50,3 +57,4 @@ build_flags =
     -I inc
     -include node_config.h
     -I ../../
+    -O1
