Fix bootloader configuration

--- a/firmware/nodes/stair_step/platformio.ini
+++ b/firmware/nodes/stair_step/platformio.ini
@@ -42,7 +42,7 @@ build_flags =
 build_unflags = -Os
 board_build.ldscript = linker/custom_app_script.ld
 build_flags =
-    -D BOOTLOADER_MODE
+    -D WITH_BOOTLOADER
     -I inc
     -include node_config.h
     -I ../../
@@ -53,7 +53,7 @@ build_unflags = -Os
 board_build.ldscript = linker/custom_app_script.ld
 build_flags =
     -D DETECTOR
-    -D BOOTLOADER_MODE
+    -D WITH_BOOTLOADER
     -I inc
     -include node_config.h
     -I ../../
