Add color management

--- a/firmware/nodes/stair_step/platformio.ini
+++ b/firmware/nodes/stair_step/platformio.ini
@@ -29,7 +29,7 @@ build_flags =
     -I ../../
     -O1
 
-[env:l0_master]
+[env:l0_detector]
 build_unflags = -Os
 build_flags =
     -D DETECTOR
@@ -48,7 +48,7 @@ build_flags =
     -I ../../
     -O1
 
-[env:l0_master_bootloader]
+[env:l0_detector_bootloader]
 build_unflags = -Os
 board_build.ldscript = linker/custom_app_script.ld
 build_flags =
